<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/difficulty_menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/splash" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_toast_border"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/normalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:src="@drawable/ui_normal" />

        <TextView
            android:id="@+id/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:text="@string/normal_description"
            android:textColor="#000000"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/nightmareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:src="@drawable/ui_nightmare" />

        <TextView
            android:id="@+id/nightmareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:text="@string/nightmare_description"
            android:textColor="#000000"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/hellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:src="@drawable/ui_hell" />

        <TextView
            android:id="@+id/hellText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:text="@string/hell_description"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>